test/classes/errors/nilability-assign/assign-oknil-owned-from-oknil-shared.chpl
//  lhs: owned?  rhs: shared?  error: mm

class MyClass {  var x: int;  }

var lhs: owned MyClass?;
var rhs: shared MyClass?;

lhs = rhs;

compilerError("done");

